fix(react-dates-datepicker): increase z-index to 15

--- a/src/styles/semantic/definitions/third-party-components/react-dates-datepicker.less
+++ b/src/styles/semantic/definitions/third-party-components/react-dates-datepicker.less
@@ -15,7 +15,8 @@
 /*
   Portal date picker
 */
-.DateRangePicker_picker__portal {
+.DateRangePicker_picker__portal,
+.SingleDatePicker_picker__portal {
   z-index: @pickerZIndex;
 }
 
